--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -1,3 +1,5 @@
+---
+---
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400italic,700italic,700&subset=latin,cyrillic);
 
 body {
@@ -267,4 +269,9 @@ footer {
     font-size:12pt;
     color:#444;
   }
+}
+
+.post-list {
+  list-style-type: none;
+  padding: 0;
 }
